@@ -22,7 +22,6 @@ include_once './global_defines.php';            // Defines used in a few places
 
 include_once './includes/check_login.php';		// Needs to be refactored and split into several functions
 include_once './includes/load_languages.php';   // Global variables are a mess in this file
-include_once './includes/request_var.php';		// This injects register globals -- eliminate
 
 require './vendor/autoload.php';				// Load the auto-loader
 require_once './common.php';					// Loads the boot-strap messy code for each page
